--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,32 +2,35 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #fff; /* ou toute autre couleur de fond nécessaire */
-    padding: 0 30px; 
-  
+    background-color: #fff; 
+    height: 100px; 
+    padding: 15px;
   }
   
   .logo-container img {
-    height: 60px; /* ajustez selon vos besoins */
+    height: 60px; 
+    background-image: url('../../images/logo.png');
   }
   
   .navbar {
     display: flex;
-    gap: 20px; /* espace entre les liens */
+    gap: 20px; 
   }
   
   .navbar a {
     text-decoration: none;
-    color: #000; /* couleur du texte pour les liens */
-    font-weight: bold; /* gras pour les liens */
-    padding: 10px; /* espace autour du texte pour un meilleur clic */
+    color: #000; 
+    font-weight: bold; 
+    padding: 10px; 
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 30px;
   }
   
 
   .social-icon {
     display: inline-block;
-    width: 24px; /* largeur de l'icône */
-    height: 24px; /* hauteur de l'icône */
+    width: 66px; /* largeur de l'icône */
+    height: 66px; /* hauteur de l'icône */
     background-size: contain;
     background-repeat: no-repeat;
     margin-left: 20px; /* espace entre les icônes */
@@ -41,5 +44,8 @@
   
   .youtube {
     background-image: url('../../images/youtube-icon.png'); 
+  }
+  .logo-container{
+    width: 100px;
   }
   
