--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #000;
+    background-color: #ffffff;
     color: white;
     text-align: center;
     padding: 20px;
