--- a/src/Screen/ArticleList.css
+++ b/src/Screen/ArticleList.css
@@ -16,22 +16,28 @@
   
   .article-image {
     border-radius: 50%;
-    width: 80px; /* Adjust based on your design */
-    height: 80px; /* Adjust based on your design */
+    width: 200px; 
+    height: 200px; 
     object-fit: cover;
     margin-bottom: 20px;
   }
   
   .article-content {
     text-align: center;
+    font-size: medium;
   }
   
   .article-title {
     font-size: 1.5rem;
     margin-bottom: 10px;
   }
-  
+  .content-text {
+    margin:10px;
+    line-height: 1.5;
+    font-size: 20px;
+  }
   .article-description {
+    font-size: 20px;
     margin-bottom: 20px;
   }
   
