--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -1,21 +1,32 @@
 .hero-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 600px; /* ou la hauteur selon votre design */
-    background-image: url('../../images/Art\ n\ clap\ HeroSection.png'); /* ajustez avec votre image */
-    background-size: cover;
-    background-position: center;
-    color: #fff;
-    text-align: center;
-  }
-  
-  .hero-section h1 {
-    font-size: 3rem; /* ajustez à votre design */
-  }
-  
-  .hero-section p {
-    font-size: 1.5rem; /* ajustez à votre design */
-  }
-  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 1000px; /* Ajustez selon votre design */
+  position: relative; /* Important pour positionner correctement la vidéo et le texte */
+  overflow: hidden; /* Empêche la vidéo de déborder */
+  color: #fff;
+  text-align: center;
+}
+
+.hero-section video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Garantit que la vidéo couvre la zone sans être déformée */
+  z-index: 0; /* La vidéo reste en arrière-plan */
+}
+
+.hero-section h1 {
+  font-size: 7rem; /* Ajustez à votre design */
+  z-index: 1; 
+  opacity: 0.33;
+}
+
+.hero-section p {
+  font-size: 1.5rem; /* Ajustez à votre design */
+  z-index: 1; /* Assure que le texte est au-dessus de la vidéo */
+}
