--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -3,9 +3,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 1000px; /* Ajustez selon votre design */
-  position: relative; /* Important pour positionner correctement la vidéo et le texte */
-  overflow: hidden; /* Empêche la vidéo de déborder */
+  height: 1000px; 
+  position: relative; 
+  overflow: hidden; 
   color: #fff;
   text-align: center;
 }
@@ -16,17 +16,10 @@
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover; /* Garantit que la vidéo couvre la zone sans être déformée */
-  z-index: 0; /* La vidéo reste en arrière-plan */
+  object-fit: cover;
+  z-index: 0; 
 }
 
-.hero-section h1 {
-  font-size: 7rem; /* Ajustez à votre design */
-  z-index: 1; 
-  opacity: 0.33;
-}
 
-.hero-section p {
-  font-size: 1.5rem; /* Ajustez à votre design */
-  z-index: 1; /* Assure que le texte est au-dessus de la vidéo */
-}
+
+
