--- a/src/Screen/ArticleList.css
+++ b/src/Screen/ArticleList.css
@@ -1,51 +1,70 @@
-/* ArticlesList.css */
-
 .articles-list {
-  
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-  }
-  
-  .article-item {
-   
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 40px;
-  }
-  
-  .article-image {
-    border-radius: 50%;
-    width: 200px; 
-    height: 200px; 
-    object-fit: cover;
-    margin-bottom: 20px;
-  }
-  
-  .article-content {
-    text-align: center;
-    font-size: medium;
-  }
-  
-  .article-title {
-    font-size: 1.5rem;
-    margin-bottom: 10px;
-  }
-  .content-text {
-    margin:10px;
-    line-height: 1.5;
-    font-size: 20px;
-  }
-  .article-description {
-    font-size: 20px;
-    margin-bottom: 20px;
-  }
-  
-  .article-read-more {
-    text-decoration: none;
-    color: #000; /* Adjust to match your site's theme */
-    background-color: #f0f0f0; /* Light grey, adjust as needed */
-    padding: 10px 15px;
-    border-radius: 5px;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+  padding: 20px;
+}
+
+.article-item {
+  background-color: white;
+  border-radius: 10px;
+  margin: 10px 0;
+  width: 90%;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  display: flex;
+  flex-direction: column;
+  overflow: hidden; 
+  justify-content: space-between;
+}
+
+.article-header {
+  display: flex;
+  justify-content: space-between; /* Aligns title to the left and image to the right */
+  align-items: center;
+  padding: 20px;
+}
+
+.article-title {
+  font-size: 18px;
+  color: #333;
+  flex-grow: 1; /* Ensures title takes up any extra space */
+}
+
+.article-image {
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  margin-left: 20px; /* Spacing between title and image */
+  object-fit: cover;
+}
+
+.article-content {
+  text-align: left; /* Aligns text to the left */
+  padding: 0 20px 20px 20px;
+}
+
+.article-description {
+  font-size: 14px;
+  color: #666;
+  margin-bottom: 10px;
+}
+
+.article-read-more {
+  font-size: 30px;
+  text-decoration: none;
+  color: white;  /* Text color set to white */
+  padding: 10px 20px;
+  background-color: red;  /* Background color set to red */
+  border-radius: 20px;
+  border: none;
+  cursor: pointer;
+  display: block; /* Makes it a block to fill the content area */
+  width: fit-content; /* Makes the button wrap the text */
+  margin: 0 auto 10px; /* Centers the button and adds spacing */
+  transition: background-color 0.3s ease;
+}
+
+.article-read-more:hover {
+  background-color: darkred; /* Darker red on hover for visual feedback */
+}
